<?xml version="1.0"?>
<package>
  <name>geom_rcnn</name>
  <version>0.1.0</version>
  <description>The geom_rcnn package</description>

  <maintainer email="alexsbroad@gmail.com">Alex Broad</maintainer>
  <license>MIT</license>
  <url type="website">http://www.alexanderbroad.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export> </export>
</package>
